[package]
name = "turnkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256 = "0.10.0"
zeroize = { version = "=1.3.0" }
solana-sdk = "=1.18.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.57"
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
sha2 = "0.11.0-pre.3"
base64 = "0.22.0"
rand = "0.9.0-alpha.0"
dotenv = "0.15.0"
base64-url = "2.0.2"

[dev-dependencies]
solana-client = "=1.18.1"
